--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	
         <meta charset="utf-8">
-        <script type="text/javascript" src="foo.js"></script>
+        <script type="text/javascript" src="../js/foo.js"></script>
         <script type="text/javascript" async="true" defer="true" data-group="netshoes-freedom" data-apikey="netshoes-ar" src="//static.chaordicsystems.com/static/loader.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" /> 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
