--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	
         <meta charset="utf-8">
         <script type="text/javascript" src="../js/foo.js"></script>
-        <script type="text/javascript" async="true" defer="true" data-group="netshoes-freedom" data-apikey="netshoes-ar" src="//static.chaordicsystems.com/static/loader.js"></script>
+        <link rel="stylesheet" href="../css/style.css" />
+        <script id="loader" type="text/javascript" async="true" defer="true" data-apikey="netshoes-ar" src="//static.chaordicsystems.com/static/loader.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" /> 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -12,16 +13,26 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/chaordic.png" width="85" height="30" class="d-inline-block align-top" alt="">
+                </a>
+            </nav>
             <ul class="nav nav-pills">
-            <a class="navbar-brand" href="#">Freedom Mocks</a>            
+            <a class="navbar-brand" href="#">Widget Mocker</a>            
                 <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" id="apikey" placeholder="Apikey" aria-label="Apikey">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="setApikey()">Go</button>
-                    </form>
+                    <input class="form-control mr-sm-2" type="search" id="apikey" placeholder="Apikey" aria-label="Apikey">
+                    <button class="btn btn-outline-success my-2 my-sm-0" id="apikeyButton" type="submit" onclick="setApikey()">Go</button>
+                </form>
                 <form class="form-inline">
                 	<input class="form-control mr-sm-2" type="search" id="pid" placeholder="Product ID" aria-label="Product ID">
                 	<button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="product()">Go</button>
                 </form>
+                <div class="checkbox navbar-btn" id="freedom">
+                    <label class="navbar-link" for="filterUnfulfilled">
+                        <input type="checkbox" class="autosubmit" id="checkbox" value="true"> Freedom
+                    </label>
+                </div>
             </ul>
         </nav>        
         <div class="container" style="max-width: 1306px">
