--- a/public/index.html
+++ b/public/index.html
@@ -4,49 +4,35 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	
         <meta charset="utf-8">
         <script type="text/javascript" src="../js/foo.js"></script>
-        <script type="text/javascript" async="true" defer="true" data-group="netshoes-freedom" data-apikey="netshoes-ar" src="//static.chaordicsystems.com/static/loader.js"></script>
+        <link rel="stylesheet" href="../css/style.css" />
+        <script id="loader" type="text/javascript" async="true" defer="true" data-apikey="netshoes-ar" src="//static.chaordicsystems.com/static/loader.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" /> 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body onload="isFreedom()">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/chaordic.png" width="85" height="30" class="d-inline-block align-top" alt="">
+                </a>
+            </nav>
             <ul class="nav nav-pills">
-            <a class="navbar-brand" href="#">Freedom Mocks</a>            
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Apikey</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" id ="netshoes-ar" onclick="setApikey(id)" href="#">netshoes-ar</span></a>
-                            <a class="dropdown-item" id ="netshoes-mx" onclick="setApikey(id)" href="#">netshoes-mx</span></a>
-                            <a class="dropdown-item" id="ns-asics-mx" onclick="setApikey(id)" href="#">ns-asics-mx</a>
-                            <a class="dropdown-item" id="ns-asics" onclick="setApikey(id)" href="#">ns-asics</a>
-                            <a class="dropdown-item" id="ns-asics-mx" onclick="setApikey(id)" href="#">ns-asics-mx</a>
-                            <a class="dropdown-item" id="ns-cazadosport" onclick="setApikey(id)" href="#">ns-cazadosport</a>
-                            <a class="dropdown-item" id="ns-cruzeiro" onclick="setApikey(id)" href="#">ns-cruzeiro</a>
-                            <a class="dropdown-item" id="ns-gigantedacolina" onclick="setApikey(id)" href="#">ns-gigantedacolina</a>
-                            <a class="dropdown-item" id="ns-internacional" onclick="setApikey(id)" href="#">ns-internacional</a>
-                            <a class="dropdown-item" id="ns-lojanba" onclick="setApikey(id)" href="#">ns-lojanba</a>
-                            <a class="dropdown-item" id="ns-midway" onclick="setApikey(id)" href="#">ns-midway</a>
-                            <a class="dropdown-item" id="ns-mundopalmeiras" onclick="setApikey(id)" href="#">ns-mundopalmeiras</a>
-                            <a class="dropdown-item" id="ns-onitsukatiger" onclick="setApikey(id)" href="#">ns-onitsukatiger</a>
-                            <a class="dropdown-item" id="ns-santosshop" onclick="setApikey(id)" href="#">ns-santosshop</a>
-                            <a class="dropdown-item" id="ns-santosstore" onclick="setApikey(id)" href="#">ns-santosstore</a>
-                            <a class="dropdown-item" id="ns-saopaulomania" onclick="setApikey(id)" href="#">ns-saopaulomania</a>
-                            <a class="dropdown-item" id="ns-shoestock" onclick="setApikey(id)" href="#">ns-shoestock</a>
-                            <a class="dropdown-item" id="ns-shoptimao" onclick="setApikey(id)" href="#">ns-shoptimao</a>
-                            <a class="dropdown-item" id="ns-soycuervo" onclick="setApikey(id)" href="#">ns-soycuervo</a>
-                            <a class="dropdown-item" id="ns-tiendachivas" onclick="setApikey(id)" href="#">ns-tiendachivas</a>
-                            <a class="dropdown-item" id="ns-tiendacruzazulonline" onclick="setApikey(id)" href="#">ns-tiendacruzazulonline</a>
-                            <a class="dropdown-item" id="ns-tiendaoficialamerica" onclick="setApikey(id)" href="#">ns-tiendaoficialamerica</a>
-                            <a class="dropdown-item" id="ns-tiendapumas" onclick="setApikey(id)" href="#">ns-tiendapumas</a>
-                            <a class="dropdown-item" id="ns-zattini" onclick="setApikey(id)" href="#">ns-zattini</a>
-                        </div>
-                </li>
+            <a class="navbar-brand" href="#">Widget Mocker</a>            
+                <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" id="apikey" placeholder="Apikey" aria-label="Apikey">
+                    <div class="checkbox navbar-btn" id="freedom">
+                        <label class="navbar-link" for="filterUnfulfilled">
+                            <input type="checkbox" class="autosubmit" id="checkbox" value="true"> Freedom
+                        </label>
+                    </div>
+                    <button class="btn btn-outline-success my-2 my-sm-0" id="apikeyButton" type="submit" onclick="setApikey()">Go</button>
+                </form>
                 <form class="form-inline">
                 	<input class="form-control mr-sm-2" type="search" id="pid" placeholder="Product ID" aria-label="Product ID">
                 	<button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="product()">Go</button>
-                </form>
+                </form>                
             </ul>
         </nav>        
         <div class="container" style="max-width: 1306px">
