--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	
         <meta charset="utf-8">
-        <script type="text/javascript" src="../js/foo.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
         <link rel="stylesheet" href="../css/style.css" />
         <script id="loader" type="text/javascript" async="true" defer="true" data-apikey="netshoes-ar" src="//static.chaordicsystems.com/static/loader.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" /> 
